# vrchatbot

./: .gitignore  LICENSE  Makefile  README.md  botconfig.toml  pyproject.toml  vrchat_take_agreement.md
data/: take_agreement.unitypackage
tests/: test_audio_tools.py  test_chatbot.py  test_recorder.py  test_speech_recognition.py  test_text_speaker.py  test_vrchatbot.py
vrchatbot/: __main__.py  audio_tools.py  chatbot.py  constants.py  recorder.py  run_parallely.py  speech_recongnition.py  text_speaker.py
